--- a/index.html
+++ b/index.html
@@ -96,8 +96,11 @@
                 <p>Nikita Sharma</p>
                 <h1 >Copyright &copy; www.Barbera.com. All rights reserved!</h1>
                 <img src="logofb.png" alt="Our Client">
-			    <img src="logoi.png" alt="Our Client">
-			    <img src="logoplay.png" alt="Our Client">
+                <a href="http://facebook.com"target="_blank">go to Facebook</a>
+                <img src="logoi.png" alt="Our Client">
+                <a href="http://instagram.com"target="_blank">go to Instagram</a>
+                <img src="logoplay.png" alt="Our Client">
+                <a href="http://playstore.com"target="_blank">go to PlayStore</a>
             </div>
             
 			
