--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <img src="logoi.png" alt="Our Client">
                 <a href="http://instagram.com"target="_blank">go to Instagram</a>
                 <img src="logoplay.png" alt="Our Client">
-                <a href="http://playstore.com"target="_blank">go to PlayStore</a>
+                <a href="http://playstore.com"target="_blank">go to Playstore</a>
             </div>
             
 			
