--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="center">
             <div class="nik">
                 <img src="nikki.jpeg" alt="MyOnlineMeal.com" style="height: 49px; padding-right: 1144px ;">
-                <p>Nikita Sharmaaaa</p>
+                <p>Nikita Sharma</p>
                 <h1 >Copyright &copy; www.Barbera.com. All rights reserved!</h1>
                 <img src="logofb.png" alt="Our Client">
                 <a href="http://facebook.com"target="_blank">go to Facebook</a>
