--- a/index.html
+++ b/index.html
@@ -91,15 +91,14 @@
     <footer>
         <div class="center">
             <div class="nik">
-                <img src="nikki.jpeg" alt="MyOnlineMeal.com" style="height: 49px; padding-right: 1144px ;">
-                <p>Nikita Sharma</p>
-                <h1 >Copyright &copy; www.Barbera.com. All rights reserved!</h1>
+                <!-- <img src="nikki.jpeg" alt="MyOnlineMeal.com" style="height: 49px; padding-right: 1144px ;"> -->
+                <!-- <p>Nikita Sharma</p> -->
                 <img src="logofb.png" alt="Our Client">
                 <a href="http://facebook.com"target="_blank">go to Facebook</a>
                 <img src="logoi.png" alt="Our Client">
                 <a href="http://instagram.com"target="_blank">go to Instagram</a>
                 <img src="logoplay.png" alt="Our Client">
-                <a href="http://playstore.com"target="_blank">go to Playstore</a>
+                <a href="http://play.google.com"target="_blank">go to Playstore</a>
                 
             </div>
             			
